--- a/app.json
+++ b/app.json
@@ -23,7 +23,7 @@
     },
     "web": {
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/favicon/favicon.png"
     },
     "plugins": [
       "expo-router",
